--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <h1>Cats vs. Dogs</h1>
-<p>For some, it's hard to choose between the two.</p>|
+<p>For some, it's hard to choose between the two.</p>
 <p>For others, they are either cat people or dog people.</p>
 <p>Personally, I love cats. But I love all animals including dogs.</p>
 
