--- a/index.html
+++ b/index.html
@@ -1,21 +1,62 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Cats vs. Dogs</title>
-<link rel="stylesheet" href="style.css">
-</head>
+  <meta charset="utf-8">
+  <title>Sarah's Notes</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet"></head>
+
 <body>
 
-<h1>Cats vs. Dogs</h1>
-<p>For some, it's hard to choose between the two.</p>
-<p>For others, they are either cat people or dog people.</p>
-<p>Personally, I love cats. But I love all animals including dogs.</p>
-
-<ul>
-<li><a href="/cats.html">Cats</a></li>
-<li><a href="/dogs.html">Dogs</a></li>
-</ul>
+ <div class="main-nav">
+        <ul class="nav">
+          <li class="name">Sarah's Notes</li>
+        </ul>
+    </div>
   
-</body>
-</html>
+  <header>
+      <img src="https://pbs.twimg.com/profile_images/1472910657/image.jpg" class="profile-image">
+      <h2 class="tag name">Hello, I’m Sarah.</h2>
+      <p class="tag location">Things that I love include: my adorable son, cats, art, music, and videogames.</p>
+    </header>
+<h3 class="serif" align="left"><font size=11>These are my notes...!</h3></font>
+  
+<!Accoridian>
+  <button class="accordion">Section 1</button>
+<div class="panel">
+  <p>Lorem ipsum...</p>
+</div>
+
+<button class="accordion">Section 2</button>
+<div class="panel">
+  <p>Lorem ipsum...</p>
+</div>
+
+<button class="accordion">Section 3</button>
+<div class="panel">
+  <p>Lorem ipsum...</p>
+</div>
+
+<script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+    acc[i].addEventListener("click", function() {
+        /* Toggle between adding and removing the "active" class,
+        to highlight the button that controls the panel */
+        this.classList.toggle("active");
+
+        /* Toggle between hiding and showing the active panel */
+        var panel = this.nextElementSibling;
+        if (panel.style.display === "block") {
+            panel.style.display = "none";
+        } else {
+            panel.style.display = "block";
+        }
+    });
+} 
+</script>
+  
+</body></html>
