--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <h2 class="tag name">Hello, I’m Sarah.</h2>
     <div class="div.first"><p class="tag location">Things that I love include: my adorable son, cats, art, music, and videogames.</p></div>
     </header>
-<h3 class="serif" align="left"><font size=11>These are my notes...!</h3></font>
+
+<div class="card"><h3 class="serif" align="left"><font size=11>These are my notes...!</h3></font>
     
 <div class="navbar">
   <a href="#home"><b>Home</b></a>
@@ -26,6 +27,6 @@
   <p>Some text some text some text some text..</p>
 </div>
 
-
+</div>
   
 </body></html>
